# Achievement-Page

./: .env  .gitignore  LICENSE.md  create.py  main.py  pyproject.toml
market/: __init__.py  achievements.db  forms.py  models.py  routes.py
market/templates/: achievement.html  base.html  home.html  ip.html  login.html  register.html
market/templates/includes/: items_modals.html  user_modals.html
