[tool.poetry]
name = "repl_python3_Achievement-Page"
version = "0.1.0"
description = ""
authors = ["Filiprar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.0.2"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.0"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
